--- a/README
+++ b/README
@@ -1,2 +1,7 @@
 # Style-2
 An update on our summer Style project, https://github.com/priya-padmanaban/Style
+
+
+Goals gor Update:
+  -Add a word count
+  -Add ability for user to search specific words in their text without using command-f
